--- a/kin1d/README
+++ b/kin1d/README
@@ -1,11 +1,23 @@
+Before running the 1d kinematic cloud model, set up the following:
+
+1. Link the source directory containing the P3 lookup tables to the local ./lookup_tables
+
+2. Link/copy the source file 'module_mp_p3.F90' to the local ./mp_p3.f90
+
+3. Modify the ./Makefile as necessary, with proper FORTRAN compiler and desired compiler options.
+
+4. Modify driving model ./cld1d.f90 as necessary, with desired P3 version and options.
+
+
 To run the 1d kinematic model, use the Makefile to compile the various components:
 
 % make execld
 
 To run:
-% execld
+% ./execld
 
 Various output files (e.g. fort.100) are created.  The desired output can be modified in the driver program, cld1d.f90.
+The output file ./out_p3.dat can be used as input file for the plotting script ./plot_1col.py to create Hovmoller plots.
 
 To remove all .o files and output:
 % make clean
