--- a/kin1d/README
+++ b/kin1d/README
@@ -2,7 +2,8 @@ Before running the 1d kinematic cloud model, set up the following:
 
 1. Link the source directory containing the P3 lookup tables to the local ./lookup_tables
 
-2. Link/copy the source file 'module_mp_p3.F90' to the local ./mp_p3.f90
+2. Link/copy the P3 source file '../code_p3/module_mp_p3.f90' to the local ./mp_p3.f90.
+   Link/copy the kin1D files (cld1d.f90, execld.f90, routinesCld1d.f90) to the main directory.
 
 3. Modify the ./Makefile as necessary, with proper FORTRAN compiler and desired compiler options.
 
@@ -18,6 +19,10 @@ To run:
 
 Various output files (e.g. fort.100) are created.  The desired output can be modified in the driver program, cld1d.f90.
 The output file ./out_p3.dat can be used as input file for the plotting script ./plot_1col.py to create Hovmoller plots.
+
+A python plotting script is provided in the subdirectory ./plots. To insert a title to plot, either modify the plot script 
+or add the title as a command line argument when running the script:
+% python3 plot_1col.py 'My title'
 
 To remove all .o files and output:
 % make clean
