--- a/kin1d/README
+++ b/kin1d/README
@@ -2,8 +2,8 @@ Before running the 1d kinematic cloud model, set up the following:
 
 1. Link the source directory containing the P3 lookup tables to the local ./lookup_tables
 
-2. Link/copy the P3 source file '../code_p3/microphy_p3.f90' to the local work directory
-   Link/copy the kin1D files (cld1d.f90, execld.f90, routinesCld1d.f90) from ./code to the local workdirectory.
+2. Link/copy the P3 source file '../src /microphy_p3.f90' to the local work directory
+   Link/copy the kin1D files (cld1d.f90, execld.f90, routinesCld1d.f90) from ./src to the local work directory.
 
 3. Modify the ./Makefile as necessary, with proper FORTRAN compiler and desired compiler options.
 
