Added functionality to kin1d to automate test sets in kin1d.
Each commit with changes to P3 should include this full set of tests.
It is a one-line command with the script 'run_full_tests'. After
compiling kin1d, various configuraitons are run:

1cat-2momI-noLF
1cat-3mom-LF
2cat-3mom-LF
3cat-3mom-LF

Plots are then automatically generated.  The tests from the previous
commit are transfered to './results-previous_commit' and then all
output files, plots, timing files, and code are moved/copied to
./results'.

This will facilitate catching any changes to the results and/or
timing along the development process (rather than having to backtrack).

--- a/kin1d/README
+++ b/kin1d/README
@@ -28,3 +28,8 @@ or add the title as a command line argument when running the script:
 To remove all .o files and output:
 % make clean
 
+
+To automatically run a full set of tests (with various configurations of nCat, log_trplMomIce, and log_liqFrac),
+generate plots, and store everything in a 'tests_kin1D' directory (to be done in development mode before each
+commit), copy contents of './full_testing' to the kin1D work directory.  The script ./run_full_tests does everything.
+
